<resources>
    <string name="app_name">on.time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_up_message">Make yourself\nmore on time</string>
    <string name="start">START</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="schedule">Schedule</string>
    <string name="note">Note</string>
    <string name="search_notes">Search Notes</string>
    <string name="pin">Pin</string>
    <string name="note_settings">Note Settings</string>
    <string name="title">Title</string>
    <string name="text">Your text</string>
    <string name="enter_title">Title</string>
    <string name="save_schedule">save schedule</string>
    <string name="full_day">Full Day</string>
    <string name="start_from">Start from</string>
    <string name="finish">Finish</string>
    <string name="repeat">Repeat</string>
    <string name="reminder">Reminder</string>
    <string name="place">Place</string>
    <string name="save">Save</string>
    <string name="pick_date">Pick a Date</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="empty_notifications_list">No Upcoming Schedules</string>
    <string name="empty_schedule_list">You have nothing schedule</string>

    <string-array name="reminders">
        <item>On Time</item>
        <item>Before 5 Minutes</item>
        <item>Before 10 Minutes</item>
    </string-array>
</resources>