<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".fragments.splash.StartUpFragment">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_48ssp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:lines="2"
            android:text="@string/start_up_message"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_up_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:padding="@dimen/_6sdp"
            android:text="@string/start"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_9sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/splash_skip_startup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Don't show again"
            android:fontFamily="@font/nunito_sans"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/start_up_btn"
            app:layout_constraintStart_toStartOf="@+id/start_up_btn"
            app:layout_constraintTop_toBottomOf="@+id/start_up_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>