<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".activity.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/home_top_menu"
            app:title="@string/app_name"
            app:titleTextAppearance="@style/TopbarTitleText"
            app:titleTextColor="@color/white" />

        <RadioGroup
            android:id="@+id/dest_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:background="@drawable/home_sections_bg"
            android:orientation="horizontal"
            android:padding="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_toolbar">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/schedule_section_rb"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/home_sections_bg"
                android:button="@null"
                android:checked="true"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:text="@string/schedule"
                android:textColor="@color/white" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/note_section_rb"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/home_sections_bg"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:text="@string/note"
                android:textColor="@color/white" />
        </RadioGroup>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/mainFragmentsContainer"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_16sdp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dest_radio_group"
            app:navGraph="@navigation/main_graph" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>